--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -7,7 +7,7 @@
       <div class="col-12 text-center m-0 p-0">
         <div class="w-75 m-auto">
           <div
-            class="d-flex align-items-center justify-content-center my-3 contact_icons"
+            class="d-flex align-items-center justify-content-center my-4 contact_icons"
           >
             <a
               href="https://www.linkedin.com/in/ayman-sedkey-0760252a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
@@ -78,7 +78,7 @@
               ></textarea>
               <p><i class="fa-solid fa-message"></i></p>
             </div>
-            <button type="submit" class="btn btn-primary">Send</button>
+            <button type="submit" class="btn border border-black fw-semibold btn-send">Send Your message</button>
           </form>
         </div>
       </div>
