Edite the href to routerlink

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
             <a
               class="nav-link text-dark d-flex align-items-center"
-              href="/home"
+              routerLink="/home"
             >
               <i class="fa-solid fa-house p-3 rounded-circle text-white"></i>
               <p class="m-0 p-0 d-none fw-bold text-white">Home</p>
@@ -17,7 +17,7 @@
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
             <a
               class="nav-link text-dark d-flex align-items-center"
-              href="/aboutme"
+              routerLink="/aboutme"
             >
               <i class="fa-solid fa-user p-3 rounded-circle text-white"></i>
               <p class="m-0 p-0 d-none fw-bold text-white">About Me</p>
@@ -26,7 +26,7 @@
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
             <a
               class="nav-link text-dark d-flex align-items-center"
-              href="/skills"
+              routerLink="/skills"
             >
               <i class="fas fa-cogs p-3 rounded-circle text-white"></i>
               <p class="m-0 p-0 d-none fw-bold text-white">Skills</p>
@@ -35,7 +35,7 @@
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
             <a
               class="nav-link text-dark d-flex align-items-center"
-              href="/services"
+              routerLink="/services"
             >
               <i
                 class="fa-solid fa-briefcase p-3 rounded-circle text-white"
@@ -46,7 +46,7 @@
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
             <a
               class="nav-link text-dark d-flex align-items-center"
-              href="/projects"
+              routerLink="/projects"
             >
               <i
                 class="fa-solid fa-diagram-project p-3 rounded-circle text-white"
@@ -57,7 +57,7 @@
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
             <a
               class="nav-link text-dark d-flex align-items-center"
-              href="/contact"
+              routerLink="/contact"
             >
               <i class="fa-solid fa-envelope p-3 rounded-circle text-white"></i>
               <p class="m-0 p-0 d-none fw-bold text-white">Contact</p>
