--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -8,14 +8,14 @@
             <div class="card">
               <img [src]="project.image" class="card-img-top" alt="..." />
               <div class="card-body text-center">
-                <h5 class="card-title">{{ project.name }}</h5>
+                <h5 class="card-title">{{ project.title }}</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
                 <div class="d-flex align-items-center justify-content-center">
                   <a
-                    [href]="project.live"
+                    [href]="project.demo"
                     target="_blank"
                     class="btn btn-primary rounded-pill text-capitalize me-3 me-lg-4"
                   >
