--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,64 +3,42 @@
     <div class="row">
       <div class="col-12">
         <ul
-          class="navbar-nav flex-lg-column flex-row align-items-center align-items-lg-start justify-content-between"
+          class="navbar-nav"
         >
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
-            <a
-              class="nav-link text-dark d-flex align-items-center"
-              routerLink="/home"
-            >
-              <i class="fa-solid fa-house p-3 rounded-circle text-white"></i>
-              <p class="m-0 p-0 d-none fw-bold text-white">Home</p>
+            <a class="nav-link rounded-pill text-dark d-flex align-items-center justify-content-center" routerLink="/home" routerLinkActive="active">
+              <span class="d-block d-lg-none text-center"><i class="fa-solid fa-house p-3"></i></span>
+              <span class="fw-bold d-none d-lg-block text-center">Home</span>
+            </a>
+          </li>
+          <li class="nav-item rounded-pill mb-lg-4 mb-0" >
+            <a class="nav-link rounded-pill text-dark d-flex align-items-center justify-content-center" routerLink="/aboutme" routerLinkActive="active">
+              <span class="d-block d-lg-none text-center"><i class="fa-solid fa-user p-3"></i></span>
+              <span class="fw-bold d-none d-lg-block text-center">About Me</span>
             </a>
           </li>
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
-            <a
-              class="nav-link text-dark d-flex align-items-center"
-              routerLink="/aboutme"
-            >
-              <i class="fa-solid fa-user p-3 rounded-circle text-white"></i>
-              <p class="m-0 p-0 d-none fw-bold text-white">About Me</p>
+            <a class="nav-link rounded-pill text-dark d-flex align-items-center justify-content-center" routerLink="/skills" routerLinkActive="active">
+              <span class="d-block d-lg-none text-center"><i class="fas fa-cogs p-3"></i></span>
+              <span class="fw-bold d-none d-lg-block text-center">Skills</span>
             </a>
           </li>
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
-            <a
-              class="nav-link text-dark d-flex align-items-center"
-              routerLink="/skills"
-            >
-              <i class="fas fa-cogs p-3 rounded-circle text-white"></i>
-              <p class="m-0 p-0 d-none fw-bold text-white">Skills</p>
+            <a class="nav-link rounded-pill text-dark d-flex align-items-center justify-content-center" routerLink="/services" routerLinkActive="active">
+              <span class="d-block d-lg-none text-center"><i class="fa-solid fa-briefcase p-3"></i></span>
+              <span class="fw-bold d-none d-lg-block text-center">Services</span>
             </a>
           </li>
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
-            <a
-              class="nav-link text-dark d-flex align-items-center"
-              routerLink="/services"
-            >
-              <i
-                class="fa-solid fa-briefcase p-3 rounded-circle text-white"
-              ></i>
-              <p class="m-0 p-0 d-none fw-bold text-white">Services</p>
+            <a class="nav-link rounded-pill text-dark d-flex align-items-center justify-content-center" routerLink="/projects" routerLinkActive="active">
+              <span class="d-block d-lg-none text-center"><i class="fa-solid fa-diagram-project p-3"></i></span>
+              <span class="fw-bold d-none d-lg-block text-center">Projects</span>
             </a>
           </li>
           <li class="nav-item rounded-pill mb-lg-4 mb-0">
-            <a
-              class="nav-link text-dark d-flex align-items-center"
-              routerLink="/projects"
-            >
-              <i
-                class="fa-solid fa-diagram-project p-3 rounded-circle text-white"
-              ></i>
-              <p class="m-0 p-0 d-none fw-bold text-white">Projects</p>
-            </a>
-          </li>
-          <li class="nav-item rounded-pill mb-lg-4 mb-0">
-            <a
-              class="nav-link text-dark d-flex align-items-center"
-              routerLink="/contact"
-            >
-              <i class="fa-solid fa-envelope p-3 rounded-circle text-white"></i>
-              <p class="m-0 p-0 d-none fw-bold text-white">Contact</p>
+            <a class="nav-link rounde justify-content-center rounded-pill text-dark d-flex align-items-center justify-content-center" routerLink="/contact" routerLinkActive="active">
+              <span class="d-block d-lg-none text-center"><i class="fa-solid fa-envelope p-3"></i></span>
+              <span class="fw-bold d-none d-lg-block text-center">Contact</span>
             </a>
           </li>
         </ul>
