--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 .NavBar {
     height: 100vh;
     border-right: 2px solid #0563bb;
+    background-color: #fff;
 }
 .container-fluid {
     background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
