--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #fff ;
+    box-shadow: inset 0 0 5px 0563bb;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #0563bb;
+    border-radius: 10px;
+    height: 2px !important;
+  }
