--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -5,7 +5,7 @@
                 <h1 class="text-center mb-lg-4 mb-2">Services</h1>
             </div>
             <div class="col-6 col-lg-4 text-center mt-2" *ngFor="let service of services">
-                <div class="card mb-1 mb-lg-3 py-3">
+                <div class="card py-3">
                      <i [class]="service.icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">{{service.title}}</h5>
